@@ -1,7 +1,9 @@
 package com.likelionsg13th.cardinal.map.dto;
 
 import com.fasterxml.jackson.annotation.JsonInclude;
+import com.fasterxml.jackson.annotation.JsonProperty;
 import com.likelionsg13th.cardinal.booth.domain.Booth;
+import com.likelionsg13th.cardinal.common.domain.Amenity;
 import com.likelionsg13th.cardinal.event.domain.Event;
 import com.likelionsg13th.cardinal.goods.domain.Goods;
 import com.likelionsg13th.cardinal.performance.domain.Performance;
@@ -13,6 +15,7 @@ import java.util.Collections;
 import java.util.List;
 
 import static com.likelionsg13th.cardinal.common.enums.ContentType.*;
+import static com.likelionsg13th.cardinal.common.enums.DayOfWeek.ALWAYS;
 
 @Getter
 @AllArgsConstructor
@@ -24,9 +27,11 @@ public class MapSearchItemDto {
     private String thumbnailUrl;
     private String name;
     private List<String> days;
+    @JsonProperty("isScrapped")
+    private boolean scrapped;
     private MapSearchDetail detail;
 
-    public static MapSearchItemDto of(Booth booth, MapSearchDetail detail) {
+    public static MapSearchItemDto of(Booth booth, MapSearchDetail detail,boolean isScrapped) {
         return MapSearchItemDto.builder()
                 .id(booth.getId())
                 .category(BOOTH.name())
@@ -34,11 +39,12 @@ public class MapSearchItemDto {
                 .name(booth.getName())
                 .thumbnailUrl(booth.getThumbnailUrl())
                 .days(booth.getOperatingDays().stream().map(Enum::name).toList())
+                .scrapped(isScrapped)
                 .detail(detail)
                 .build();
     }
 
-    public static MapSearchItemDto of(Event event, MapSearchDetail detail) {
+    public static MapSearchItemDto of(Event event, MapSearchDetail detail,boolean isScrapped) {
         return MapSearchItemDto.builder()
                 .id(event.getId())
                 .category(EVENT.name())
@@ -46,23 +52,25 @@ public class MapSearchItemDto {
                 .name(event.getName())
                 .thumbnailUrl(event.getThumbnailUrl())
                 .days(event.getOperatingDays().stream().map(Enum::name).toList())
+                .scrapped(isScrapped)
                 .detail(detail)
                 .build();
     }
 
-    public static MapSearchItemDto of(Goods goods, MapSearchDetail detail) {
+    public static MapSearchItemDto of(Goods goods, MapSearchDetail detail,boolean isScrapped) {
         return MapSearchItemDto.builder()
                 .id(goods.getId())
                 .category(GOODS.name())
                 .subCategory(null)
                 .name(goods.getName())
                 .thumbnailUrl(goods.getThumbnailUrl())
-                .days(Collections.emptyList()) // Goods have no operating days
+                .days(List.of(ALWAYS.name())) // Goods have no operating days
+                .scrapped(isScrapped)
                 .detail(detail)
                 .build();
     }
 
-    public static MapSearchItemDto of(Performance performance, MapSearchDetail detail) {
+    public static MapSearchItemDto of(Performance performance, MapSearchDetail detail,boolean isScrapped) {
         return MapSearchItemDto.builder()
                 .id(performance.getId())
                 .category(PERFORMANCE.name())
@@ -70,7 +78,21 @@ public class MapSearchItemDto {
                 .name(performance.getName())
                 .thumbnailUrl(performance.getThumbnailUrl())
                 .days(performance.getOperatingDays().stream().map(Enum::name).toList())
+                .scrapped(isScrapped)
                 .detail(detail)
+                .build();
+    }
+
+    public static MapSearchItemDto of(Amenity amenity) {
+        return MapSearchItemDto.builder()
+                .id(amenity.getId())
+                .category(AMENITY.name())
+                .subCategory(null)
+                .name(amenity.getName())
+                .thumbnailUrl(null)
+                .days(List.of(ALWAYS.name()))
+                .scrapped(false)
+                .detail(null)
                 .build();
     }
 }
